--- a/ansible.cfg
+++ b/ansible.cfg
@@ -21,7 +21,7 @@
 #poll_interval  = 15
 #sudo_user      = root
 #ask_sudo_pass = True
-#ask_pass      = True
+ask_pass      = True
 #transport      = smart
 #remote_port    = 22
 #module_lang    = C
@@ -104,7 +104,7 @@ host_key_checking = False
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
-#remote_user = root
+remote_user = root
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
