--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-#inventory      = /home/centos/Ansible1/hosts
+inventory      = /home/centos/Ansible1/hosts
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
