--- a/playbooks/3-Print.yml
+++ b/playbooks/3-Print.yml
@@ -1,6 +1,6 @@
 - name: Demo on print
   hosts: all
   tasks:
-    name: Print Hello World
-    debug:
-      msg: Hello World!
+    - name: Print Hello World
+      debug:
+        msg: Hello World!
