--- a/ansible.cfg
+++ b/ansible.cfg
@@ -21,7 +21,7 @@ inventory      = /home/centos/Ansible1/hosts
 #poll_interval  = 15
 #sudo_user      = root
 #ask_sudo_pass = True
-ask_pass      = True
+#ask_pass      = True
 #transport      = smart
 #remote_port    = 22
 #module_lang    = C
