--- a/playbooks/roles/AppServer/vars/main.yml
+++ b/playbooks/roles/AppServer/vars/main.yml
@@ -1,3 +1,4 @@
 APP_USER: student
 APP_HOME: "/home/{{APP_USER}}"
 TOMCAT_URL: https://archive.apache.org/dist/tomcat/tomcat-8/v{{TOMCAT_VERSION}}/bin/apache-tomcat-{{TOMCAT_VERSION}}.tar.gz
+TOMCAT_HOME: "{{APP_HOME}}/apache-tomcat-{{TOMCAT_VERSION}}"
